Fix Java 11 Compatibility